kube-dashboard/templates/kube-dashboard-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dashboard-ingress-route
  namespace: kube-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kube.interpolar.ch`)
      priority: 10
      services:
        - name: kubernetes-dashboard
          port: 443
      middlewares:
      - name: secure
        namespace: traefik
      tls:
        certResolver: cf-production
    - kind: Rule
      match: Host(`kube.interpolar.ch`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: h2c
      middlewares:
      - name: secure
        namespace: traefik
      tls:
        certResolver: cf-production
